# voice-agent-course

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
.cursor/rules/: genai-engineering.mdc  python-fastapi.mdc  uv.mdc
.github/workflows/: test.yml
examples/: microphone_websocket_client.py  real_voice_agent_demo.py  websocket_client_example.py  websocket_server_example.py  websocket_voice_agent.py
scripts/: stt_simple_example.py  tts_simple_example.py  tts_usage_examples.py  voice_agent_demo.py
scripts/agent/: langgraph_agent_example.py  test_langgraph_agent.py
scripts/stt/: stt_minimal_example.py  stt_simple_example.py
scripts/tts/: tts_simple_example.py  tts_usage_examples.py
scripts/voice_agent/: voice_agent_demo.py
scripts/voice_agent_notools/: voice_agent_notools_demo.py
scripts/voice_agent_tools/: voice_agent_tools_demo.py
src/voice_agent_course/application/: voice_agent.py  voice_agent_enhanced.py  voice_agent_simple.py
src/voice_agent_course/domain/agents/: __init__.py  langgraph_agent.py
src/voice_agent_course/domain/prompts/: system_prompts.py
src/voice_agent_course/domain/tools/: __init__.py  mock_tools.py
src/voice_agent_course/infrastructure/: __init__.py
src/voice_agent_course/infrastructure/audio/: __init__.py  audio_input_processor.py  realtime_stt_adapter.py  realtime_tts_adapter.py  transcription_processor.py
src/voice_agent_course/infrastructure/llm_providers/: __init__.py  ollama.py  qroq.py
tests/: __init__.py
